T009: Extended by ability to run more than one writer.